Fixed spacing on header (again)

--- a/src/sass/objects/_header.scss
+++ b/src/sass/objects/_header.scss
@@ -5,23 +5,17 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    padding-top: 2.5em;
+    padding-top: 2em;
     padding-bottom: 2em;
 }
 
 .header__title {
-    margin: 0 0 0.8em 0;
     width: 400px;
     text-align: center;
     border: none;
     display: block;
     padding: 0;
     font-size: 0;
-}
-
-.header__img {
-    padding: 10px;
-    //height: 300px;
 }
 
 .header__nav {
